{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 6,
  "lineage": "469e8ac4-6fd2-2cf3-7fe2-c02f93fd8ca3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "existing_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240435918562:security-group/sg-05c978f6f0029b866",
            "description": "Allow SSH and HTTP inbound",
            "filter": null,
            "id": "sg-05c978f6f0029b866",
            "name": "my-sg-name",
            "region": "us-east-1",
            "tags": {
              "Name": "my-sg-name"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e45b54d5e50c7c35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240435918562:subnet/subnet-03719d40778142d99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03719d40778142d99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "240435918562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0e45b54d5e50c7c35"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240435918562:vpc/vpc-0e45b54d5e50c7c35",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0b047adc6400c2780",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0d94446b750bd785c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e45b54d5e50c7c35",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0586b9ebe106a54d5",
            "owner_id": "240435918562",
            "region": "us-east-1",
            "tags": {
              "ENV": "PROD",
              "Name": "my-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e2c86481225d3c51",
            "arn": "arn:aws:ec2:us-east-1:240435918562:instance/i-0045fc7eefdf4e5c7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0045fc7eefdf4e5c7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e653b044c62a5407",
            "private_dns": "ip-10-0-1-52.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.52",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f2cd0b311f211727",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03719d40778142d99",
            "tags": {
              "Name": "my-private-ec2"
            },
            "tags_all": {
              "Name": "my-private-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c978f6f0029b866"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_security_group.existing_sg",
            "data.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240435918562:security-group/sg-05c978f6f0029b866",
            "description": "Allow SSH and HTTP inbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c978f6f0029b866",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-sg-name",
            "name_prefix": "",
            "owner_id": "240435918562",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-sg-name"
            },
            "tags_all": {
              "Name": "my-sg-name"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e45b54d5e50c7c35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240435918562:subnet/subnet-03719d40778142d99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03719d40778142d99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "240435918562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0e45b54d5e50c7c35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240435918562:vpc/vpc-0e45b54d5e50c7c35",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08cd47ecae3e8a685",
            "default_route_table_id": "rtb-0586b9ebe106a54d5",
            "default_security_group_id": "sg-00c34caa7fe2f29e5",
            "dhcp_options_id": "dopt-0d94446b750bd785c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e45b54d5e50c7c35",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0586b9ebe106a54d5",
            "owner_id": "240435918562",
            "region": "us-east-1",
            "tags": {
              "ENV": "PROD",
              "Name": "my-vpc"
            },
            "tags_all": {
              "ENV": "PROD",
              "Name": "my-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}